[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tdd-bank-account"
version = "0.1.0"
description = "Python TDD Bank Account kata — ported from xp-dojo/tdd-bank-account-java"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mutmut>=2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mutmut]
paths_to_mutate = "src/bank/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
